Force scrollbar to be visible on all pages to avoid that the page jumps horizontally

--- a/comics/static/css/comics.css
+++ b/comics/static/css/comics.css
@@ -1,3 +1,7 @@
+html {
+    overflow-y: scroll;
+}
+
 body {
     padding-top: 60px;
 }
